examples/check/thread_lib/klee-out-1/test000001.pc
array mm[4] : w32 -> w8 = symbolic
(query [(Eq false
            (Eq 77
                (ReadLSB w32 0 mm)))]
       false)
